Change A/B tests configuration
We no longer set the percentage and expiry in this yaml file, but rather
using the Fastly dictionaries. The only thing required in the
`ab_tests.yaml` is the name of your test.

--- a/ab_tests/ab_tests.yaml
+++ b/ab_tests/ab_tests.yaml
@@ -1,7 +1,3 @@
 ---
-- name: BenchmarkInlineLink
-  b_percentage: 30
-  expiry: 14d
-- name: SearchMatchLength
-  b_percentage: 5
-  expiry: 1d
+- BenchmarkInlineLink
+- SearchMatchLength
