Add new search A/B test
- Add SearchFormatBoosting
- Remove SearchMatchLength

--- a/ab_tests/ab_tests.yaml
+++ b/ab_tests/ab_tests.yaml
@@ -5,5 +5,5 @@
 - BenchmarkDVLATitle1
 - BenchmarkInlineLink
 - EpilepsyDrivingStart
-- SearchMatchLength
+- SearchFormatBoosting
 - WorldwidePublishingTaxonomy
