Add dummy multivariate test config

--- a/ab_tests/ab_tests.yaml
+++ b/ab_tests/ab_tests.yaml
@@ -1,2 +1,8 @@
 ---
-- TaskListSidebar
+- TaskListSidebar:
+  - A
+  - B
+- MultivariateTest:
+  - firstVariant
+  - secondVariant
+  - thirdVariant
