Add tests for civil-partnership tasklist features
The Modelling Services team are testing the tasklist header and sidebar features for a new tasklist `End a civil partnership: step by step`.

Trello card: https://trello.com/c/ahzNdh5h

--- a/ab_tests/ab_tests.yaml
+++ b/ab_tests/ab_tests.yaml
@@ -13,6 +13,12 @@
 - TaskListSidebar:
   - A
   - B
+- CivilPartnershipTasklistSidebar:
+  - A
+  - B
+- CivilPartnershipTaskListHeader:
+  - A
+  - B
 - TrafficSignsSummary:
   - A
   - B
